--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 				<div class="item item-double">
 					<p>Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod gravida neque. </p>
 				</div>
+        </div>
 		</section>
 		<!-- Ideas -->
 		<section id="ideas">
@@ -95,6 +96,7 @@
 				</div>
 			</div>
 		</section>
+    
 		<!-- Host -->
 		<section id="host" class="alternate-background">
 			<div class="group">
